syntax = "proto3";

package greet;
option go_package="greetpb";

message Greeting{
    string first_name =1; // 1 is defined the tag first field in the message
    string last_name =2; // 2 is defined the tag first field in the message
}

message GreetRequest{
    Greeting greeting =1;
}

message GreetResponse{
    string result =1;
}


service GreetService{
    // Unary API
    rpc Greet(GreetRequest) returns (GreetResponse){};
}